fix: alignment text in sub category page

--- a/client/src/styles/SkillCategoryPage.styles.css
+++ b/client/src/styles/SkillCategoryPage.styles.css
@@ -38,6 +38,7 @@
 .sub_category_card_item_container h3 {
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
 }
 
 .sub_category_chapter_icon_container {
